# LeadScout

./: .env.example  .gitignore  LeadScout_Brief.md  README.md  TZ_LeadScout_Bot.md  pyproject.toml
.cursor/rules/: leadscout.mdc
agents/: drafter.py  monitor.py  replier.py  scorer.py  scout.py
config/: geo.yaml  limits.yaml  sources.yaml  triggers.yaml
connectors/: base.py  generic_parser.py  reddit_connector.py  telegram_connector.py  vk_connector.py  youtube_connector.py
controlbot/: bot.py  handlers.py  keyboards.py
core/: db.py  models.py  rate_limiter.py  settings.py  trigger_filter.py
knowledge/: bingx_facts.md
llm/: client.py  drafter.py  json_utils.py  replier.py  schemas.py  scorer.py
llm/prompts/: dialogue_reply.md  draft_message.md  scoring_system.md
scripts/: init_db.py  seed_sources.py
tests/: test_llm_json_parsing.py  test_rate_limiter.py  test_trigger_filter.py
