[project]
name = "leadscout"
version = "0.1.0"
description = "LeadScout — мультиагентный ИИ-бот поиска и первичного контакта лидов для партнёрской программы BingX"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "LeadScout dev team" }]

dependencies = [
    "telethon>=1.34",
    "aiogram>=3.4,<4.0",
    "praw>=7.7",
    "google-api-python-client>=2.120",
    "anthropic>=0.34",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "pydantic-settings>=2.2",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pytest>=7.4",
]

[project.optional-dependencies]
# Playwright нужен только для JS-сайтов в универсальном парсере (§17 ТЗ),
# выделен в extra, чтобы не тянуть тяжёлый браузерный движок в базовой установке.
parser-js = ["playwright>=1.42"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["connectors", "core", "llm", "agents", "controlbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
